--- a/Python Notebooks/Main-Code.ipynb
+++ b/Python Notebooks/Main-Code.ipynb
@@ -5,7 +5,7 @@
    "id": "306ef822",
    "metadata": {},
    "source": [
-    "# Chrnoic Kidney Disease Prediction - Using Machine Learning"
+    "# Kidney Disease Detection"
    ]
   },
   {
