Change references from 'Chronic Kidney Disease' to 'Kidney Disease'
Updated the title and description to reflect kidney disease instead of chronic kidney disease.

--- a/Python Notebooks/Main-Code.ipynb
+++ b/Python Notebooks/Main-Code.ipynb
@@ -28,10 +28,10 @@
    "id": "bb0f4c15",
    "metadata": {},
    "source": [
-    "## Machine Learning Approach to Predict the  Chronic Kidney Disease\n",
+    "## Machine Learning Approach to Predict the  Kidney Disease\n",
     "\n",
-    "It identifies the limitations in handling missing values when analysing CKD data, proposes a new method to handle missing values and presents the evaluation of different methods based on UCI dataset. Further, this work also highlights the importance of statistical analysis as well as the domain knowledge of the features when making a\n",
-    "prediction based on clinical data related to CKD.\n",
+    "It identifies the limitations in handling missing values when analysing Kidney Disease data, proposes a new method to handle missing values and presents the evaluation of different methods based on UCI dataset. Further, this work also highlights the importance of statistical analysis as well as the domain knowledge of the features when making a\n",
+    "prediction based on clinical data related to Kidney Disease.\n",
     "\n",
     "**chronic renal disease, machine learning, classification algorithms, extra tree classifier, random forest classifier,XGBoost**\n",
     "\n",
